@@ -1,7 +1,6 @@
 package com.cherrypick.backend.domain.user;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
@@ -23,21 +22,21 @@ public class CustomUserDetailsService implements UserDetailsService {
   @Override
   @Transactional(readOnly = true)
   public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-    return userReader.findWithAuthortyByProviderId(username).map(user -> createUser(username, user))
-      .orElseThrow(() -> new UsernameNotFoundException(username + " -> 데이터베이스에서 찾을 수 없습니다."));
+    return userReader.findByProviderId(username).map(user -> createUser(username, user))
+        .orElseThrow(() -> new UsernameNotFoundException(username + " -> 데이터베이스에서 찾을 수 없습니다."));
   }
 
   private org.springframework.security.core.userdetails.User createUser(String username,
-    User user) {
+      User user) {
     if (!user.isActivated()) {
       throw new RuntimeException(username + " -> 활성화되어 있지 않습니다.");
     }
 
-    List<GrantedAuthority> grantedAuthority = new ArrayList<>(Arrays.asList(
-      new SimpleGrantedAuthority(user.getAuthority().toString())));
+    List<GrantedAuthority> grantedAuthority = new ArrayList<>(List.of(
+        new SimpleGrantedAuthority(user.getAuthority().toString())));
 
     return new org.springframework.security.core.userdetails.User(user.getProviderId(),
-      user.getPassword(),
-      grantedAuthority);
+        user.getPassword(),
+        grantedAuthority);
   }
 }
